@@ -28,13 +28,16 @@ package org.mmarini.routes.model.v2;
 
 import java.awt.geom.Point2D;
 import java.awt.geom.Rectangle2D;
-import java.util.Collections;
+import java.util.HashMap;
 import java.util.HashSet;
+import java.util.Map;
 import java.util.Optional;
 import java.util.Random;
 import java.util.Set;
 import java.util.function.BiFunction;
 import java.util.function.BinaryOperator;
+import java.util.function.Function;
+import java.util.function.ToDoubleBiFunction;
 import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
@@ -44,22 +47,84 @@ import org.mmarini.routes.model.Constants;
  *
  */
 public class GeoMap implements Constants {
-	private final static GeoMap EMPTY = new GeoMap(Collections.emptySet(), Collections.emptySet(),
-			Collections.emptySet());
+	private final static GeoMap EMPTY = new GeoMap(Set.of(), Map.of(), Set.of(), Set.of(), DEFAULT_FREQUENCE);
 
-	/**
+	/*
+	 *
+	 * @param sites the sites
+	 *
+	 * @param minWeight the minimum weight
+	 *
+	 * @param random the random generator
 	 *
 	 * @return
+	 */
+	/**
+	 * Returns random weight for a given set of sites
+	 *
+	 * @param sites          the sites
+	 * @param weightSupplier the weight supplier
+	 */
+	public static Map<Tuple2<MapNode, MapNode>, Double> buildWeights(final Set<MapNode> sites,
+			final ToDoubleBiFunction<MapNode, MapNode> weightSupplier) {
+		final Map<Tuple2<MapNode, MapNode>, Double> result = sites.stream().sorted().flatMap(from -> {
+			return sites.stream().sorted().filter(to -> !from.equals(to)).map(to -> {
+				return new Tuple2<>(from, to);
+			});
+		}).collect(Collectors.toMap(Function.identity(), t -> {
+			final double w = weightSupplier.applyAsDouble(t.getElem1(), t.getElem2());
+			return w;
+		}));
+		return result;
+	}
+
+	/**
+	 * Returns an empty map
 	 */
 	public static GeoMap create() {
 		return EMPTY;
 	}
 
 	/**
+	 * Returns a map with edges only
 	 *
-	 * @param profile
-	 * @param random
-	 * @return
+	 * @param edges the edges
+	 */
+	public static GeoMap create(final Set<MapEdge> edges) {
+		final Set<MapNode> nodes = retrieveNodes(edges);
+		return new GeoMap(edges, Map.of(), Set.of(), nodes, DEFAULT_FREQUENCE);
+	}
+
+	/**
+	 * Returns a map with edges and weights for site
+	 *
+	 * @param edges   the edges
+	 * @param weights the weights
+	 */
+	public static GeoMap create(final Set<MapEdge> edges, final Map<Tuple2<MapNode, MapNode>, Double> weights) {
+		final Set<MapNode> sites = retrieveSites(weights);
+		final Set<MapNode> nodes = new HashSet<>(retrieveNodes(edges));
+		nodes.addAll(sites);
+		return new GeoMap(edges, weights, sites, nodes, DEFAULT_FREQUENCE);
+	}
+
+	/**
+	 * Returns a map with edges and a single site
+	 *
+	 * @param edges the edges
+	 * @param site  the site
+	 */
+	public static GeoMap create(final Set<MapEdge> edges, final MapNode site) {
+		final Set<MapNode> nodes = new HashSet<>(retrieveNodes(edges));
+		nodes.add(site);
+		return new GeoMap(edges, Map.of(), Set.of(site), nodes, DEFAULT_FREQUENCE);
+	}
+
+	/**
+	 * Returns a random map for a give profile and random generator
+	 *
+	 * @param profile the profile
+	 * @param random  the random generator
 	 */
 	public static GeoMap random(final MapProfile profile, final Random random) {
 		final Set<Point2D> siteLocations = IntStream.range(0, profile.getSiteCount())
@@ -75,6 +140,7 @@ public class GeoMap implements Constants {
 			}).or(() -> Optional.of(new Rectangle2D.Double(pt.getX(), pt.getY(), 0, 0)));
 			return result;
 		};
+
 		final BinaryOperator<Optional<Rectangle2D>> merger = (ao, bo) -> {
 			return ao.map(a -> {
 				return bo.map(b -> {
@@ -91,87 +157,146 @@ public class GeoMap implements Constants {
 		final double minY = bound.getMinY();
 		final double scaleX = profile.getWidth() / bound.getWidth();
 		final double scaleY = profile.getHeight() / bound.getHeight();
-		final Set<SiteNode> sites = siteLocations.parallelStream().map(pt -> {
-			return SiteNode.create((pt.getX() - minX) * scaleX, (pt.getY() - minY) * scaleY);
+		final Set<MapNode> sites = siteLocations.parallelStream().map(pt -> {
+			return MapNode.create((pt.getX() - minX) * scaleX, (pt.getY() - minY) * scaleY);
 		}).collect(Collectors.toSet());
-		return GeoMap.create().setSites(sites);
+
+		final Map<Tuple2<MapNode, MapNode>, Double> weights = buildWeights(sites,
+				randomWeight(profile.getMinWeight(), random));
+
+		return GeoMap.create(Set.of(), weights).setFrequence(profile.getFrequence());
 	}
 
-	private final Set<SiteNode> sites;
-	private final Set<MapNode> nodes;
+	/**
+	 * Returns the weight function generator
+	 *
+	 * @param minWeight minimum weight
+	 * @param random    the ranom generator
+	 */
+	public static ToDoubleBiFunction<MapNode, MapNode> randomWeight(final double minWeight, final Random random) {
+		final double scale = 1 - minWeight;
+		return (a, b) -> minWeight + scale * random.nextDouble();
+	}
+
+	/**
+	 * Returns the nodes for a give set of edges
+	 *
+	 * @param edges the edges
+	 */
+	private static Set<MapNode> retrieveNodes(final Set<MapEdge> edges) {
+		final Set<MapNode> result = edges.parallelStream().flatMap(edge -> {
+			return Set.of(edge.getBegin(), edge.getEnd()).stream();
+		}).collect(Collectors.toSet());
+		return result;
+	}
+
+	/**
+	 * Returns the sites for a given map of weights
+	 *
+	 * @param weights the weight map
+	 */
+	private static Set<MapNode> retrieveSites(final Map<Tuple2<MapNode, MapNode>, Double> weights) {
+		final Set<MapNode> result = weights.keySet().parallelStream().flatMap(t -> {
+			return Set.of(t.getElem1(), t.getElem2()).stream();
+		}).collect(Collectors.toSet());
+		return result;
+	}
 
 	private final Set<MapEdge> edges;
 
+	private final Map<Tuple2<MapNode, MapNode>, Double> weights;
+	private final Set<MapNode> sites;
+	private final Set<MapNode> nodes;
+	private final double frequence;
+
 	/**
-	 *
-	 * @param sites
-	 * @param nodes
-	 * @param edges
+	 * Creates a geo map
 	 */
-	protected GeoMap(final Set<SiteNode> sites, final Set<MapNode> nodes, final Set<MapEdge> edges) {
+	protected GeoMap(final Set<MapEdge> edges, final Map<Tuple2<MapNode, MapNode>, Double> weights,
+			final Set<MapNode> sites, final Set<MapNode> nodes, final double frequence) {
 		super();
+		assert (edges != null);
+		assert (weights != null);
+		assert (sites != null);
+		assert (nodes != null);
+		this.edges = edges;
+		this.weights = weights;
 		this.sites = sites;
 		this.nodes = nodes;
-		this.edges = edges;
+		this.frequence = frequence;
 	}
 
 	/**
+	 * Returns the map with a new edge
 	 *
-	 * @param node
-	 * @return
+	 * @param edge the edge
 	 */
 	public GeoMap add(final MapEdge edge) {
-		if (edges.contains(edge)) {
+		// Find for any existing edge
+		if (edges.parallelStream().anyMatch(e -> {
+			final boolean res = e.equals(edge) && e.getPriority() == edge.getPriority()
+					&& e.getSpeedLimit() == edge.getSpeedLimit();
+			return res;
+		})) {
+			// No changes
 			return this;
-		} else {
-			final Set<MapEdge> newEdges = new HashSet<>(edges);
-			newEdges.add(edge);
+		} else if (edges.contains(edge)) {
+			// Replace edge
+
+			final Set<MapEdge> newEdges = edges.parallelStream().map(e -> {
+				return e.equals(edge) ? edge : e;
+			}).collect(Collectors.toSet());
 			return setEdges(newEdges);
+		} else {
+			// Add edge
+			final Set<MapEdge> edges = new HashSet<>(this.edges);
+			edges.add(edge);
+			return setEdges(edges);
 		}
 	}
 
 	/**
 	 *
 	 * @param node
+	 * @param minWeight
+	 * @param random
 	 * @return
 	 */
-	public GeoMap add(final MapNode node) {
-		if (nodes.contains(node)) {
+	public GeoMap changeNode(final MapNode node, final ToDoubleBiFunction<MapNode, MapNode> toDoubleBiFunction) {
+		if (!nodes.contains(node)) {
 			return this;
+		} else if (getSite(node).isPresent()) {
+			// site -> node => remove the weights
+			if (sites.size() == 1) {
+				// no weights
+				return setWeights(Map.of());
+			} else if (sites.size() == 2) {
+				// Single site
+				final MapNode site = sites.stream().filter(e -> !e.equals(node)).findAny().get();
+				return setSite(site);
+			} else {
+				// remove weights
+				final Map<Tuple2<MapNode, MapNode>, Double> newWeights = weights.entrySet().parallelStream()
+						.filter(entry -> {
+							final Tuple2<MapNode, MapNode> k = entry.getKey();
+							return !(k.getElem1().equals(node) || k.getElem2().equals(node));
+						}).collect(Collectors.toMap(entry -> entry.getKey(), entry -> entry.getValue()));
+				return setWeights(newWeights);
+			}
+		} else if (sites.isEmpty()) {
+			// node -> single site
+			return setSite(node);
 		} else {
-			final Set<MapNode> newNodes = new HashSet<>(nodes);
-			newNodes.add(node);
-			return setNodes(newNodes);
+			// node -> site => add weights
+			final Map<Tuple2<MapNode, MapNode>, Double> addWeights = sites.parallelStream().flatMap(s -> {
+				return Set.of(new Tuple2<>(s, node), new Tuple2<>(node, s)).stream();
+			}).collect(Collectors.toMap(Function.identity(), k -> {
+				return toDoubleBiFunction.applyAsDouble(k.getElem1(), k.getElem2());
+			}));
+			final Map<Tuple2<MapNode, MapNode>, Double> newWeights = new HashMap<>(weights);
+			newWeights.putAll(addWeights);
+			return setWeights(newWeights);
 		}
-	}
-
-	/**
-	 *
-	 * @param node
-	 * @return
-	 */
-	public GeoMap add(final SiteNode node) {
-		if (sites.contains(node)) {
-			return this;
-		} else {
-			final Set<SiteNode> newSites = new HashSet<>(sites);
-			newSites.add(node);
-			return setSites(newSites);
-		}
-	}
-
-	/**
-	 *
-	 * @param edge
-	 * @return
-	 */
-	public GeoMap addEdge(final MapEdge edge) {
-		final MapNode start = edge.getBegin();
-		final MapNode end = edge.getEnd();
-		final GeoMap result1 = add(edge);
-		final GeoMap result2 = start instanceof SiteNode ? result1.add((SiteNode) start) : result1.add(start);
-		final GeoMap result3 = end instanceof SiteNode ? result2.add((SiteNode) end) : result2.add(end);
-		return result3;
 	}
 
 	/**
@@ -182,103 +307,107 @@ public class GeoMap implements Constants {
 	 */
 	public Optional<MapNode> findNearst(final Point2D point, final double distance) {
 		final double d2 = distance * distance;
-		final Optional<MapNode> result = getAllNodesStream().parallelStream()
-				.filter(n -> point.distanceSq(n.getLocation()) <= d2)
-				.min((a, b) -> Double.compare(a.getLocation().distanceSq(point), b.getLocation().distanceSq(point)));
+		final Optional<MapNode> result = nodes.parallelStream().filter(n -> {
+			return point.distanceSq(n.getLocation()) <= d2;
+		}).min((a, b) -> {
+			final double da2 = a.getLocation().distanceSq(point);
+			final double db2 = b.getLocation().distanceSq(point);
+			return Double.compare(da2, db2);
+		});
 		return result;
 	}
 
 	/**
-	 * Returns the stream of all nodes
+	 * Returns the edge matching the pattern
+	 *
+	 * @param pattern the pattern
 	 */
-	private Set<MapNode> getAllNodesStream() {
-		final Set<MapNode> allNodes = new HashSet<>(nodes);
-		allNodes.addAll(sites);
-		return allNodes;
+	public Optional<MapEdge> getEdge(final MapEdge pattern) {
+		return edges.parallelStream().filter(e -> e.equals(pattern)).findAny();
 	}
 
 	/**
-	 *
-	 * @return
+	 * Returns the edges
 	 */
 	public Set<MapEdge> getEdges() {
 		return edges;
 	}
 
 	/**
-	 *
-	 * @param node
-	 * @return
+	 * Returns the frequence
 	 */
-	public Optional<MapNode> getNode(final MapNode node) {
-		return nodes.parallelStream().filter(n -> n.equals(node)).findAny();
+	public double getFrequence() {
+		return frequence;
 	}
 
 	/**
+	 * Returns the node matching the pattern
 	 *
-	 * @return
+	 * @param pattern the pattern
+	 */
+	public Optional<MapNode> getNode(final MapNode pattern) {
+		return nodes.parallelStream().filter(n -> n.equals(pattern)).findAny();
+	}
+
+	/**
+	 * Returns the nodes
 	 */
 	public Set<MapNode> getNodes() {
 		return nodes;
 	}
 
 	/**
+	 * Returns the site matching the pattern
 	 *
-	 * @param node
-	 * @return
+	 * @param pattern the pattern
 	 */
-	public Optional<SiteNode> getSite(final MapNode node) {
-		return sites.parallelStream().filter(s -> s.equals(node)).findAny();
+	public Optional<MapNode> getSite(final MapNode pattern) {
+		return sites.parallelStream().filter(s -> s.equals(pattern)).findAny();
 	}
 
 	/**
-	 *
-	 * @return
+	 * Returns the sites
 	 */
-	public Set<SiteNode> getSites() {
+	public Set<MapNode> getSites() {
 		return sites;
 	}
 
 	/**
 	 *
-	 * @param node
+	 * @param k
 	 * @return
+	 */
+	public double getWeight(final MapNode from, final MapNode to) {
+		return getWeight(new Tuple2<>(from, to));
+	}
+
+	/**
+	 *
+	 * @param k
+	 * @return
+	 */
+	public double getWeight(final Tuple2<MapNode, MapNode> k) {
+		return Optional.ofNullable(weights.get(k)).orElse(0.0);
+	}
+
+	/**
+	 * Returns the weight map
+	 */
+	public Map<Tuple2<MapNode, MapNode>, Double> getWeights() {
+		return weights;
+	}
+
+	/**
+	 * Returns the map without the given edge
+	 *
+	 * @param edge the edge
 	 */
 	public GeoMap remove(final MapEdge edge) {
 		if (edges.contains(edge)) {
-			final Set<MapEdge> newEdges = new HashSet<>(edges);
-			newEdges.remove(edge);
+			final Set<MapEdge> newEdges = edges.parallelStream().filter(e -> {
+				return !e.equals(edge);
+			}).collect(Collectors.toSet());
 			return setEdges(newEdges);
-		} else {
-			return this;
-		}
-	}
-
-	/**
-	 *
-	 * @param node
-	 * @return
-	 */
-	public GeoMap remove(final MapNode node) {
-		if (nodes.contains(node)) {
-			final Set<MapNode> newNodes = new HashSet<>(nodes);
-			newNodes.remove(node);
-			return setNodes(newNodes);
-		} else {
-			return this;
-		}
-	}
-
-	/**
-	 *
-	 * @param node
-	 * @return
-	 */
-	public GeoMap remove(final SiteNode node) {
-		if (sites.contains(node)) {
-			final Set<SiteNode> newSites = new HashSet<>(sites);
-			newSites.remove(node);
-			return setSites(newSites);
 		} else {
 			return this;
 		}
@@ -289,48 +418,105 @@ public class GeoMap implements Constants {
 	 *
 	 * @param node the node to remove
 	 */
-	public GeoMap removeNodeFromMap(final MapNode node) {
-		if (!sites.contains(node) && !nodes.contains(node)) {
+	public GeoMap remove(final MapNode node) {
+		if (nodes.contains(node)) {
+			final Set<MapEdge> newEdges = edges.parallelStream().filter(e -> {
+				return !(e.getBegin().equals(node) || e.getEnd().equals(node));
+			}).collect(Collectors.toSet());
+
+			if (!sites.contains(node)) {
+				// only edge node
+				return setEdges(newEdges);
+			} else if (sites.size() > 2) {
+				// recompute weights, sites
+				final Map<Tuple2<MapNode, MapNode>, Double> newWeights = weights.entrySet().parallelStream()
+						.filter(entry -> {
+							final Tuple2<MapNode, MapNode> k = entry.getKey();
+							return !(k.getElem1().equals(node) || k.getElem2().equals(node));
+						}).collect(Collectors.toMap(e -> {
+							return e.getKey();
+						}, e -> {
+							return e.getValue();
+						}));
+				return create(newEdges, newWeights);
+			} else if (sites.size() == 2) {
+				// no weights, single site, recompute edges
+				final MapNode site = sites.stream().filter(s -> {
+					return !s.equals(node);
+				}).findAny().get();
+				return create(newEdges, site);
+			} else {
+				// no weights, no sites recompute edges
+				return create(newEdges);
+			}
+		} else {
 			return this;
 		}
-
-		final Set<SiteNode> newSites = sites.contains(node)
-				? sites.parallelStream().filter(site -> !site.equals(node)).collect(Collectors.toSet())
-				: sites;
-		final Set<MapNode> newNodes = nodes.contains(node)
-				? nodes.parallelStream().filter(site -> !site.equals(node)).collect(Collectors.toSet())
-				: nodes;
-		final Set<MapEdge> newEdges = edges.parallelStream()
-				.filter(edge -> !edge.getBegin().equals(node) && !edge.getEnd().equals(node))
-				.collect(Collectors.toSet());
-
-		return setSites(newSites).setNodes(newNodes).setEdges(newEdges);
 	}
 
 	/**
+	 * Returns the map with the given edges
 	 *
-	 * @param edges
-	 * @return
+	 * @param edges the edges
 	 */
 	public GeoMap setEdges(final Set<MapEdge> edges) {
-		return new GeoMap(sites, nodes, edges);
+		final Set<MapNode> nodes = new HashSet<>(sites);
+		nodes.addAll(retrieveNodes(edges));
+		return new GeoMap(edges, weights, sites, nodes, frequence);
 	}
 
 	/**
+	 * Returns the map with the give frequence
 	 *
-	 * @param nodes
-	 * @return
+	 * @param frequence the frequence
 	 */
-	public GeoMap setNodes(final Set<MapNode> nodes) {
-		return new GeoMap(sites, nodes, edges);
+	public GeoMap setFrequence(final double frequence) {
+		return new GeoMap(edges, weights, sites, nodes, frequence);
 	}
 
 	/**
+	 * Returns the map with the a single given site
 	 *
-	 * @param sites
-	 * @return
+	 * @param site the site
 	 */
-	public GeoMap setSites(final Set<SiteNode> sites) {
-		return new GeoMap(sites, nodes, edges);
+	public GeoMap setSite(final MapNode site) {
+		final Set<MapNode> nodes = new HashSet<>(retrieveNodes(edges));
+		nodes.add(site);
+		return new GeoMap(edges, Map.of(), Set.of(site), nodes, frequence);
+	}
+
+	/**
+	 * Returns the map with weight associated a departure and destination sites
+	 *
+	 * @param from   departure site
+	 * @param to     destination site
+	 * @param weight the weight
+	 */
+	public GeoMap setWeight(final MapNode from, final MapNode to, final double weight) {
+		return setWeight(new Tuple2<>(from, to), weight);
+	}
+
+	/**
+	 * Returns the map with weight associated to a key
+	 *
+	 * @param key    the key
+	 * @param weight the weight
+	 */
+	public GeoMap setWeight(final Tuple2<MapNode, MapNode> key, final double weight) {
+		final Map<Tuple2<MapNode, MapNode>, Double> newWeights = new HashMap<>(weights);
+		newWeights.put(key, weight);
+		return setWeights(newWeights);
+	}
+
+	/**
+	 * Returns the map with the given weights
+	 *
+	 * @param weights the weights
+	 */
+	public GeoMap setWeights(final Map<Tuple2<MapNode, MapNode>, Double> weights) {
+		final Set<MapNode> sites = retrieveSites(weights);
+		final Set<MapNode> nodes = new HashSet<>(retrieveNodes(edges));
+		nodes.addAll(sites);
+		return new GeoMap(edges, weights, sites, nodes, frequence);
 	}
 }
